add animal madlib/form
Co-authored-by: Dani Renner <danijrenner@gmail.com>

--- a/MadLibs/Views/Home/Home.cshtml
+++ b/MadLibs/Views/Home/Home.cshtml
@@ -4,5 +4,6 @@
     <title>MadLibs Home</title>
   </head>
   <body>
-    <a href="/puppy-story">Click here for puppies!</a>
+    <a href="/form">Click here for plain madlib!</a>
+    <a href="/animalsForm">Click here for animal madlib!</a>
   </body>
